--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ text_io = "0.1.12"
 clap = { version = "4.5.4", features = ["derive"] }
 rpassword = "7.3.1"
 anyhow = "1.0.81"
-rust-crypto = "0.2.36"
 argon2 = "0.5.3"
 hex = "0.4.3"
+hkdf = "0.12.4"
+sha2 = "0.10.8"
+drbg = "0.2.0"
+aes-gcm = "0.10.3"
