--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,6 @@ hkdf = "0.12.4"
 sha2 = "0.10.8"
 drbg = "0.2.0"
 aes-gcm-siv = "0.11.1"
+rusqlite = { version = "0.31.0", features = ["bundled"] }
+serde = { version = "1.0.197", features = ["derive"] }
+serde_json = "1.0.115"
