--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,5 @@ aes-gcm-siv = "0.11.1"
 rusqlite = { version = "0.31.0", features = ["bundled"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
+thiserror = "1.0.58"
+rand_core = "0.6.4"
