--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,6 @@ serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
 thiserror = "1.0.58"
 rand_core = "0.6.4"
+read_input = "0.8.6"
+log = "0.4.21"
+log4rs = "1.3.0"
