--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,4 @@ read_input = "0.8.6"
 log = "0.4.21"
 log4rs = "1.3.0"
 chrono = "0.4.38"
+reqwest = { version = "0.12.4", features = ["blocking"] }
